--- a/CORE/Samples/SimpleServerZEOS/Client/RestDWClientProjectZEOS.dproj
+++ b/CORE/Samples/SimpleServerZEOS/Client/RestDWClientProjectZEOS.dproj
@@ -1,7 +1,7 @@
 ﻿<Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
     <PropertyGroup>
-        <ProjectGuid>{7A3700CE-DC3C-4709-89C0-28B8ED21A10D}</ProjectGuid>
-        <MainSource>RestDWClientProject.dpr</MainSource>
+        <ProjectGuid>{84AC40A0-00E4-49E8-8532-CAE9E1A49655}</ProjectGuid>
+        <MainSource>RestDWClientProjectZEOS.dpr</MainSource>
         <Base>True</Base>
         <Config Condition="'$(Config)'==''">Debug</Config>
         <TargetedPlatforms>1</TargetedPlatforms>
@@ -49,7 +49,7 @@
         <VerInfo_Keys>CompanyName=;FileDescription=;FileVersion=1.0.0.0;InternalName=;LegalCopyright=;LegalTrademarks=;OriginalFilename=;ProductName=;ProductVersion=1.0.0.0;Comments=;CFBundleName=</VerInfo_Keys>
         <DCC_N>false</DCC_N>
         <DCC_S>false</DCC_S>
-        <SanitizedProjectName>RestDWClientProject</SanitizedProjectName>
+        <SanitizedProjectName>RestDWClientProjectZEOS</SanitizedProjectName>
         <VerInfo_Locale>1046</VerInfo_Locale>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Base_Win32)'!=''">
@@ -112,7 +112,7 @@
         <BorlandProject>
             <Delphi.Personality>
                 <Source>
-                    <Source Name="MainSource">RestDWClientProject.dpr</Source>
+                    <Source Name="MainSource">RestDWClientProjectZEOS.dpr</Source>
                 </Source>
                 <Excluded_Packages>
                     <Excluded_Packages Name="$(BDSBIN)\dclIntraweb_140_240.bpl">File c:\program files (x86)\embarcadero\studio\18.0\bin\dclIntraweb_140_240.bpl not found</Excluded_Packages>
@@ -127,9 +127,9 @@
                 <Platform value="Win32">True</Platform>
             </Platforms>
             <Deployment Version="3">
-                <DeployFile LocalName="RestDWClientProject.exe" Configuration="Debug" Class="ProjectOutput">
+                <DeployFile LocalName="RestDWClientProjectZEOS.exe" Configuration="Debug" Class="ProjectOutput">
                     <Platform Name="Win32">
-                        <RemoteName>RestDWClientProject.exe</RemoteName>
+                        <RemoteName>RestDWClientProjectZEOS.exe</RemoteName>
                         <Overwrite>true</Overwrite>
                     </Platform>
                 </DeployFile>
