Acerto de memoryleaks no sistema de Filetransfer Geral(ZERO Memoryleaks).  Acerto nos JSON's de envio e recebimento(Vários memoryleaks do novo parser retirados).  Ajustes diversos de fiz para melhorar acesso em memória.  Ajustes de consumo de memória.
git-svn-id: https://svn.code.sf.net/p/rest-dataware-componentes/dataware@382 5a50b8e4-c46e-494c-8199-665086288703

--- a/CORE/Samples/FileTransfer/Client/FileClient.dproj
+++ b/CORE/Samples/FileTransfer/Client/FileClient.dproj
@@ -80,6 +80,7 @@
         <DCC_RemoteDebug>true</DCC_RemoteDebug>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Cfg_1_Win32)'!=''">
+        <DCC_MapFile>3</DCC_MapFile>
         <AppEnableRuntimeThemes>true</AppEnableRuntimeThemes>
         <AppEnableHighDPI>true</AppEnableHighDPI>
         <DCC_RemoteDebug>false</DCC_RemoteDebug>
@@ -100,7 +101,6 @@
         </DelphiCompile>
         <DCCReference Include="uFileClient.pas">
             <Form>Form4</Form>
-            <FormType>dfm</FormType>
         </DCCReference>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
