Ajustes na versão CORE para leitura de BLOB.  Criação do exemplo D7 e Lazarus para leitura de BLOB.
git-svn-id: https://svn.code.sf.net/p/rest-dataware-componentes/dataware@419 5a50b8e4-c46e-494c-8199-665086288703

--- a/CORE/Samples/ClientBLOB/Lazarus/ClientBLOB.lpi
+++ b/CORE/Samples/ClientBLOB/Lazarus/ClientBLOB.lpi
@@ -14,6 +14,7 @@
       <Title Value="ClientBLOB"/>
       <UseAppBundle Value="False"/>
       <ResourceType Value="res"/>
+      <Icon Value="0"/>
     </General>
     <i18n>
       <EnableI18N LFM="False"/>
@@ -57,9 +58,12 @@
   <CompilerOptions>
     <Version Value="11"/>
     <PathDelim Value="\"/>
+    <SearchPaths>
+      <IncludeFiles Value="$(ProjOutDir)"/>
+    </SearchPaths>
     <Parsing>
       <SyntaxOptions>
-        <SyntaxMode Value="delphi"/>
+        <SyntaxMode Value="Delphi"/>
       </SyntaxOptions>
     </Parsing>
     <Linking>
