Função applyupdate implementada
git-svn-id: https://svn.code.sf.net/p/rest-dataware-componentes/dataware@439 5a50b8e4-c46e-494c-8199-665086288703

--- a/CORE/Samples/DwErp/Server/ServerDw.dproj
+++ b/CORE/Samples/DwErp/Server/ServerDw.dproj
@@ -83,7 +83,7 @@
         <AppEnableHighDPI>true</AppEnableHighDPI>
         <AppEnableRuntimeThemes>true</AppEnableRuntimeThemes>
         <DCC_RemoteDebug>false</DCC_RemoteDebug>
-        <DCC_Define>madExcept;$(DCC_Define)</DCC_Define>
+        <DCC_Define>madExcept;LeakChecking;$(DCC_Define)</DCC_Define>
         <DCC_ExeOutput>..\_Bin\$(Config)</DCC_ExeOutput>
         <DCC_DcpOutput>..\_Dcu\Servidor\$(Config)</DCC_DcpOutput>
         <DCC_DcuOutput>..\_Dcu\Servidor\$(Config)</DCC_DcuOutput>
